[BUG #4369] Improved readability of test results
git-svn-id: https://qooxdoo.svn.sourceforge.net/svnroot/qooxdoo/trunk@24020 61aaf1ca-a10e-0410-b9fb-ac63ec25887f

--- a/qooxdoo/component/testrunner2/source/resource/testrunner2/view/html/css/testrunner2.css
+++ b/qooxdoo/component/testrunner2/source/resource/testrunner2/view/html/css/testrunner2.css
@@ -96,6 +96,14 @@ h1 {
   color: #134275;  
 }
 
+#qxtestrunner_results ul li ul li {
+  margin: 3px 0 3px 10px;
+}
+
+#qxtestrunner_results .stacktrace {
+  font-weight: normal;
+}
+
 #qxtestrunner_results .success {
   background-color: #FAFFED;
   border-left: 2px solid #DEFF83;
